# spellfire

./: .env  .gitignore  Cargo.toml  README.md  declarations.py  generation.py  grammar.pest  main.py  requirements.txt  spellgrammar.pest  spritesheet.py  test.sqlite  test_declarations.py  test_generation.py
assets/: human.glb  test.tmx  untitled.glb
blender/: human.blend
migrations/: 20240209200936_base.sql
src/: camera.rs  generator.rs  main.rs  memory.rs  oracle.rs  spell.rs  terrain.rs
src/agent/: human.rs  mod.rs  npc.rs
src/entity/: character.rs  encounter.rs  location.rs  mod.rs
tiled/: 128x128 trees.tsx  128x160 trees.tsx  128x192 trees.tsx  64x32 terrain and paths test.tsx  MainMapTest.tmx  SpellfireMainMap.tsx  map.tmx  map.tsx  maptrees.tsx  trees.tsx
