[package]
name = "spellfire"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
benimator = "4.1.3"
bevy = { version = "0.12.0", features = ["dynamic_linking"] }
dotenv = "0.15.0"

openai_api_rust = "0.1.8"
rand = "0.8.5"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite"] }
tokio = { version = "1.36", features = ["full"] }
uuid = "1.7.0"

# [dev-dependencies]
# sqlx-cli = "0.5"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
